reseni_ispiti_prakticni/jan2_2023/InteraktivniParser/parser.ypp
%{
    #include <iostream>
    #include <cstdlib>
    #include <string>
    #include <vector>
    #include <map>
    #include "Lista.hpp"

    extern int yylex();

    void yyerror(const std::string& poruka) {
        std::cerr << poruka << std::endl;
        exit(EXIT_FAILURE);
    }

    std::map<std::string, Lista> tabela_simbola;    
%}

%union {
    std::string *niska;
    TipPodataka tip;
    Lista *lista;
    std::vector<std::string> *lista_elemenata;
}

%token LIST_T
%token <niska> ID_T
%token PRINT_T
%token PRINT_R_T
%token NUMBER_TYPE_T
%token STRING_TYPE_T
%token <niska> BROJ_T
%token <niska> STRING_T
%token PUSH_BACK_T
%token PUSH_FRONT_T
%token PUSH_T
%token POP_BACK_T
%token POP_FRONT_T
%token POP_T
%token FIND_T
%token GET_T

%type <tip> tip_podataka
%type <lista> izraz
%type <niska> vrednost
%type <lista_elemenata> lista_elemenata

%left '<' '>' LEQ_T GEQ_T EQ_T NEQ_T
%left '+' '-'
%left '*'
%precedence UMINUS
%left '.'

%%

program: program naredba
| naredba
;

naredba: LIST_T '<' tip_podataka '>' ID_T ';'   {
    tabela_simbola[*$5] = Lista($3);
    delete $5;
}
| LIST_T '<' tip_podataka '>' ID_T '=' izraz ';'    {
    $7->set_tip($3);
    tabela_simbola[*$5] = *$7;
    delete $5;
    delete $7;
}
| ID_T '=' izraz ';'    {
    if (tabela_simbola.find(*$1) == tabela_simbola.end()) {
        yyerror("Promenljiva " + *$1 + " nije deklarisana.");
    }
    tabela_simbola[*$1] = *$3;
    delete $1;
    delete $3;
}
| izraz ';'     {
    delete $1;
}
;

tip_podataka: NUMBER_TYPE_T     {
    $$ = TIP_NUMBER;
}
| STRING_TYPE_T     {
    $$ = TIP_STRING;
}
;

izraz: ID_T     {
    if (tabela_simbola.find(*$1) == tabela_simbola.end()) {
        yyerror("Promenljiva " + *$1 + " nije deklarisana.");
    }
    $$ = new Lista(tabela_simbola[*$1]);
    delete $1;
}
| '{' lista_elemenata '}'   {
    $$ = new Lista(*$2);
    delete $2;
}
| izraz '+' izraz   {
    $$ = new Lista(*$1 + *$3);
    delete $1;
    delete $3;
}
| izraz '-' izraz   {
    $$ = new Lista(*$1 - *$3);
    delete $1;
    delete $3;
}
| izraz '*' izraz   {
    $$ = new Lista(*$1 * *$3);
    delete $1;
    delete $3;
}
| '-' izraz %prec UMINUS    {
    $$ = new Lista(-(*$2));
    delete $2;
}
| izraz '<' izraz   {
    std::cout << (*$1 < *$3 ? "True" : "False") << std::endl;
    $$ = new Lista();
    delete $1;
    delete $3;
}
| izraz '>' izraz   {
    std::cout << (*$1 > *$3 ? "True" : "False") << std::endl;
    $$ = new Lista();
    delete $1;
    delete $3;
}
| izraz LEQ_T izraz     {
    std::cout << (*$1 <= *$3 ? "True" : "False") << std::endl;
    $$ = new Lista();
    delete $1;
    delete $3;
}
| izraz GEQ_T izraz     {
    std::cout << (*$1 >= *$3 ? "True" : "False") << std::endl;
    $$ = new Lista();
    delete $1;
    delete $3;
}
| izraz EQ_T izraz      {
    std::cout << (*$1 == *$3 ? "True" : "False") << std::endl;
    $$ = new Lista();
    delete $1;
    delete $3;
}
| izraz NEQ_T izraz     {
    std::cout << (*$1 != *$3 ? "True" : "False") << std::endl;
    $$ = new Lista();
    delete $1;
    delete $3;
}
| '(' izraz ')'     {
    $$ = $2;
}
| izraz '.' PRINT_T '(' ')'     {
    $1->print();
    $$ = $1;
}
| izraz '.' PRINT_R_T '(' ')'   {
    $1->print_r();
    $$ = $1;
}
| izraz '.' PUSH_BACK_T '(' vrednost ')'    {
    $1->push_back(*$5);
    $$ = $1;
    delete $5;
}
| izraz '.' PUSH_FRONT_T '(' vrednost ')'   {
    $1->push_front(*$5);
    $$ = $1;
    delete $5;
}
| izraz '.' PUSH_T '(' vrednost ',' BROJ_T ')'  {
    $1->push(*$5, std::stoi(*$7));
    $$ = $1;
    delete $5;
    delete $7;
}
| izraz '.' POP_BACK_T '(' ')'  {
    $1->pop_back();
    $$ = $1;
}
| izraz '.' POP_FRONT_T '(' ')'     {
    $1->pop_front();
    $$ = $1;
}
| izraz '.' POP_T '(' BROJ_T ')'    {
    $1->pop(std::stoi(*$5));
    $$ = $1;
    delete $5;
}
| izraz '.' FIND_T '(' vrednost ')'     {
    $$ = new Lista($1->find(*$5));
    delete $1;
    delete $5;
}
| izraz '.' GET_T '(' BROJ_T ')'        {
    $$ = new Lista($1->get(std::stoi(*$5)));
    delete $1;
    delete $5;
}
;

lista_elemenata: lista_elemenata ',' BROJ_T     {
    $1->push_back(*$3);
    $$ = $1;
    delete $3;
}
| lista_elemenata ',' STRING_T      {
    $1->push_back(*$3);
    $$ = $1;
    delete $3;
}
| BROJ_T    {
    $$ = new std::vector<std::string>();
    $$->push_back(*$1);
    delete $1;
}
| STRING_T  {
    $$ = new std::vector<std::string>();
    $$->push_back(*$1);
    delete $1;
}
;

vrednost: BROJ_T    {
    $$ = $1;
}
| STRING_T  {
    $$ = $1;
}
| ID_T      {
    if (tabela_simbola.find(*$1) == tabela_simbola.end()) {
        yyerror("Promenljiva " + *$1 + " nije definisana.");
    }
    Lista l = tabela_simbola[*$1];
    $$ = new std::string(l.get(0).to_string_repr());
    delete $1;
}
;

%%

int main() {

    if (yyparse() == 0) {
        std::cout << "Ispravna gramatika" << std::endl;
    } else {
        std::cout << "Neispravna gramatika" << std::endl;
    }

    return 0;
}
